--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -4,7 +4,7 @@ parameters:
   max_old_space_size:
     type: integer
 
-executor: docker-node-neo4j
+executor: docker-node-neo4j-arm64
 
 resource_class: << parameters.resource_class >>
 
