--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "@nestjs/platform-express": "11.0.7",
     "@nestjs/platform-socket.io": "11.0.11",
     "@nestjs/swagger": "11.0.3",
-    "@nestjs/websockets": "^11.0.11",
+    "@nestjs/websockets": "11.0.11",
     "@next/bundle-analyzer": "15.2.4",
     "@octokit/graphql": "^9.0.1",
     "@octokit/rest": "^22.0.0",
