fix: add pnpm-lock.yaml to sharedGlobals in nx.json for proper cache invalidation

--- a/nx.json
+++ b/nx.json
@@ -194,7 +194,8 @@
     "default": ["{projectRoot}/**/*", "sharedGlobals"],
     "sharedGlobals": [
       "{workspaceRoot}/nx.json",
-      "{workspaceRoot}/tsconfig.base.json"
+      "{workspaceRoot}/tsconfig.base.json",
+      "{workspaceRoot}/pnpm-lock.yaml"
     ],
     "prod": [
       "default",
