--- a/.circleci/config/jobs/build-nx-libs.yml
+++ b/.circleci/config/jobs/build-nx-libs.yml
@@ -12,6 +12,10 @@ resource_class: << parameters.resource_class >>
 environment:
   NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
   NX_CACHE_DIRECTORY: ~/project/.nx/cache-libs
+  # Disable Nx daemon to prevent conflicts when jobs run in parallel
+  # The daemon is a global process that can cause race conditions and cache
+  # confusion when multiple jobs try to use it simultaneously
+  NX_DAEMON: false
 
 steps:
   - restore-workspace
