--- a/.circleci/config/commands/build-nx-apps.yml
+++ b/.circleci/config/commands/build-nx-apps.yml
@@ -8,10 +8,10 @@ steps:
   - restore_cache:
       name: 'Restore NX Cache'
       keys:
-        # - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}-{{ checksum .Environment.CIRCLE_SHA1 }}
-        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
-        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-
-        - nx-cache-
+        # - nx-cache-apps-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}-{{ checksum .Environment.CIRCLE_SHA1 }}
+        - nx-cache-apps-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+        - nx-cache-apps-{{ .Environment.CIRCLE_BRANCH }}-
+        - nx-cache-apps-
   # - run:
   #     name: 'Monitor NX Cache Size'
   #     command: (./scripts/nx/reset-cache.sh)
@@ -20,9 +20,9 @@ steps:
   # https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching#circleci
   - save_cache:
       name: 'Save NX Cache'
-      key: nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+      key: nx-cache-apps-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
       paths:
-        - ~/project/.nx/cache
+        - ~/project/.nx/cache-apps
         # https://github.com/nrwl/nx/issues/5221
         - ~/project/dist/apps/web/.next/cache
   - persist_to_workspace:
