--- a/.circleci/config/config.yml
+++ b/.circleci/config/config.yml
@@ -21,3 +21,10 @@ orbs:
   terraform: circleci/terraform@3.2.1
 
 working_directory: ~/project
+
+# Global environment variables for all jobs
+environment:
+  # Disable Nx daemon to prevent conflicts when jobs run in parallel
+  # The daemon is a global process that can cause race conditions and cache
+  # confusion when multiple jobs try to use it simultaneously
+  NX_DAEMON: false
