--- a/.circleci/config/commands/install-packages.yml
+++ b/.circleci/config/commands/install-packages.yml
@@ -24,7 +24,7 @@ steps:
         - ~/.pnpm-store
   - run:
       name: 'Generate dist libs checksum for cache key'
-      command: ~/project/scripts/circleci/generate-dist-checksum.sh
+      command: scripts/circleci/generate-dist-checksum.sh
   - save_cache:
       name: 'Save node_modules Cache'
       # Include dist/libs package.json files in cache key because pnpm uses symlinks for file: protocol dependencies.
@@ -32,5 +32,5 @@ steps:
       # pointing to old dist content. This ensures fresh symlinks when workspace packages are updated.
       key: node-modules-cache-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "/tmp/dist-libs-checksum.txt" }}
       paths:
-        - ~/project/node_modules
+        - node_modules
   # node_modules cache needs to be checked for cache reset before we can save, otherwise nx cache grows too much. This step happens after build
