--- a/.circleci/config/jobs/build-nx-libs.yml
+++ b/.circleci/config/jobs/build-nx-libs.yml
@@ -11,7 +11,7 @@ resource_class: << parameters.resource_class >>
 
 environment:
   NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
-  NX_CACHE_DIRECTORY: /root/project/.nx/cache-libs
+  NX_CACHE_DIRECTORY: .nx/cache-libs
 
 steps:
   - restore-workspace
