--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,20 @@ commands:
           name: Restore Next.js Cache
       - run:
           command: pnpm nx run-many --target=build --projects=web,api -c ci --nx-bail
+      - run:
+          command: |
+            echo "=== Checking .nx/cache directory ==="
+            ls -la .nx/cache/ 2>/dev/null | head -20 || echo "No .nx/cache directory"
+            echo ""
+            echo "=== Count of cache entries ==="
+            find .nx/cache -type d -maxdepth 1 2>/dev/null | wc -l || echo "0"
+            echo ""
+            echo "=== Recent cache entries (last 5) ==="
+            ls -lat .nx/cache/ 2>/dev/null | head -6 || echo "No entries"
+            echo ""
+            echo "=== Checking for Next.js cache ==="
+            ls -la dist/apps/web/.next/cache/ 2>/dev/null | head -10 || echo "No Next.js cache"
+          name: Debug - Check cache directories after build
       - save_cache:
           key: nextjs-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
           name: Save Next.js Cache
