--- a/.circleci/config/commands/build-nx-apps.yml
+++ b/.circleci/config/commands/build-nx-apps.yml
@@ -16,22 +16,32 @@ steps:
   #     name: 'Monitor NX Cache Size'
   #     command: (./scripts/nx/reset-cache.sh)
   - run:
-      command: pnpm nx run-many --target=build --projects=web,api -c ci --nx-bail
-  # Debug: Check what cache directories and files were created
-  - run:
-      name: 'Debug - Check cache directories after build'
       command: |
-        echo "=== Checking .nx/cache directory ==="
+        echo "=== BEFORE BUILD - Check .nx directory ==="
+        ls -la .nx/ 2>/dev/null || echo "No .nx directory"
+        echo ""
+        echo "=== Running build ==="
+        pnpm nx run-many --target=build --projects=web,api -c ci --nx-bail
+        echo ""
+        echo "=== AFTER BUILD - Check .nx directory ==="
+        ls -la .nx/ 2>/dev/null || echo "No .nx directory after build"
+        echo ""
+        echo "=== Check .nx/cache directory ==="
         ls -la .nx/cache/ 2>/dev/null | head -20 || echo "No .nx/cache directory"
         echo ""
-        echo "=== Count of cache entries ==="
-        find .nx/cache -type d -maxdepth 1 2>/dev/null | wc -l || echo "0"
+        echo "=== Check if Nx Cloud is enabled ==="
+        echo "NX_CLOUD_ACCESS_TOKEN is ${NX_CLOUD_ACCESS_TOKEN:+set}"
+        echo "NX_SKIP_NX_CACHE is ${NX_SKIP_NX_CACHE:-not set}"
         echo ""
-        echo "=== Recent cache entries (last 5) ==="
-        ls -lat .nx/cache/ 2>/dev/null | head -6 || echo "No entries"
+        echo "=== Check cache task runner ==="
+        cat nx.json | grep -A2 "tasksRunnerOptions" || echo "No custom task runner"
         echo ""
-        echo "=== Checking for Next.js cache ==="
-        ls -la dist/apps/web/.next/cache/ 2>/dev/null | head -10 || echo "No Next.js cache"
+        echo "=== Search for any cache directories ==="
+        find . -name "cache" -type d 2>/dev/null | grep -v node_modules | grep -v ".git" | head -20
+        echo ""
+        echo "=== Check workspace root ==="
+        pwd
+        echo "NX_WORKSPACE_ROOT is ${NX_WORKSPACE_ROOT:-not set}"
   # https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching#circleci
   # Only save Next.js cache, not Nx cache (Nx Cloud handles Nx caching)
   # https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching#circleci
