--- a/package.json
+++ b/package.json
@@ -323,22 +323,22 @@
     "@nestjs/schematics": "11.0.5",
     "@nestjs/testing": "11.0.7",
     "@next/eslint-plugin-next": "15.4.1",
-    "@nx/devkit": "21.2.4",
-    "@nx/eslint": "21.2.4",
-    "@nx/eslint-plugin": "21.2.4",
-    "@nx/jest": "21.2.4",
-    "@nx/js": "21.2.4",
-    "@nx/nest": "21.2.4",
-    "@nx/next": "21.2.4",
-    "@nx/node": "21.2.4",
-    "@nx/playwright": "21.2.4",
-    "@nx/plugin": "21.2.4",
-    "@nx/react": "21.2.4",
-    "@nx/storybook": "21.2.4",
-    "@nx/vite": "21.2.4",
-    "@nx/web": "21.2.4",
-    "@nx/webpack": "21.2.4",
-    "@nx/workspace": "21.2.4",
+    "@nx/devkit": "21.4.1",
+    "@nx/eslint": "21.4.1",
+    "@nx/eslint-plugin": "21.4.1",
+    "@nx/jest": "21.4.1",
+    "@nx/js": "21.4.1",
+    "@nx/nest": "21.4.1",
+    "@nx/next": "21.4.1",
+    "@nx/node": "21.4.1",
+    "@nx/playwright": "21.4.1",
+    "@nx/plugin": "21.4.1",
+    "@nx/react": "21.4.1",
+    "@nx/storybook": "21.4.1",
+    "@nx/vite": "21.4.1",
+    "@nx/web": "21.4.1",
+    "@nx/webpack": "21.4.1",
+    "@nx/workspace": "21.4.1",
     "@parcel/watcher": "2.4.1",
     "@playwright/test": "1.51.1",
     "@sentry/types": "8.54.0",
@@ -355,7 +355,7 @@
     "@swc-node/register": "1.10.9",
     "@swc/cli": "0.6.0",
     "@swc/core": "1.10.11",
-    "@swc/jest": "0.2.37",
+    "@swc/jest": "0.2.39",
     "@swc/plugin-styled-components": "6.5.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.7.0",
@@ -409,7 +409,7 @@
     "ajv-formats": "3.0.1",
     "ajv-keywords": "5.1.0",
     "autoprefixer": "10.4.14",
-    "babel-jest": "^30.0.5",
+    "babel-jest": "30.0.5",
     "chance": "1.1.11",
     "change-case-all": "2.1.0",
     "commitlint-plugin-function-rules": "4.0.1",
@@ -462,7 +462,7 @@
     "minimatch": "9.0.4",
     "msw": "2.7.0",
     "msw-storybook-addon": "2.0.4",
-    "nx": "21.2.4",
+    "nx": "21.4.1",
     "pino-pretty": "13.0.0",
     "postcss": "8.4.45",
     "semver": "^7.7.2",
@@ -471,7 +471,7 @@
     "tailwindcss": "3.4.10",
     "traverse": "0.6.11",
     "ts-essentials": "9.1.2",
-    "ts-jest": "^29.4.1",
+    "ts-jest": "29.4.1",
     "ts-morph": "19.0.0",
     "ts-node": "10.9.1",
     "typescript": "5.5.4",
@@ -479,7 +479,8 @@
     "utility-types": "3.10.0",
     "validate-branch-name": "^1.3.2",
     "vite": "6.2.1",
-    "wait-on": "6.0.1"
+    "wait-on": "6.0.1",
+    "jest-util": "30.0.5"
   },
   "pnpm": {
     "overrides": {}
