fix: remove --nx-bail flag from build commands
- Remove --nx-bail to allow Nx to continue building other projects
- Helps with better cache population in Nx Cloud
- Allows parallel builds to complete even if one fails

--- a/.circleci/config/commands/build-nx-apps.yml
+++ b/.circleci/config/commands/build-nx-apps.yml
@@ -30,7 +30,7 @@ steps:
         ls -la .nx/ 2>/dev/null || echo "No .nx directory"
         echo ""
         echo "=== Running build ==="
-        pnpm nx run-many --target=build --projects=web,api -c ci --nx-bail
+        pnpm nx run-many --target=build --projects=web,api -c ci
         echo ""
         echo "=== AFTER BUILD - Check .nx directory ==="
         ls -la .nx/ 2>/dev/null || echo "No .nx directory after build"
